This is my homework.

--- a/homework/html/picture.html
+++ b/homework/html/picture.html
@@ -35,8 +35,9 @@
 				<h4 class="header-title" >Frontend Design I UI/UX Design</h4>
 			</div>
 			<div>
-				<div id="fst-btn" class="btn">GO AHEAD</div>
+				<div class="btn">GO AHEAD</div>
 			</div>
+		</div>
 			<div id="main">
 				<div id="content">
 					<h1 id="con_title">RAPHAEL LECHNER.</h1>
@@ -90,19 +91,17 @@
 					<div><input type='text' placeholder='Name' class="left-input"></div>
 					<div><input type='text' placeholder='Email' class="right-input"></div>
 				</div>
-				<div id="input"><input type='text' placeholder='How can I help you?' class="main-input"></div>
-				
+				<div id="input"><textarea class="main-input" placeholder='How can I help you?'></textarea></div>					
 			</div>
 			<div class="footer">
 				<div id="footer-logo">
 					<div class="footer-logo"><i class="foot-icon iconfont">&#xe90c;</i></div>
 					<div class="footer-logo"><i class="foot-icon iconfont">&#xe609;</i></div>
 					<div id="facebook" class="footer-logo"><i class="foot-icon iconfont">&#xe60b;</i></div>
-				</div>
+				</div>				
 				<div id="raphael">© Raphael Lechner</div>
 				<div id="imprint">Imprint</div>
-			</div>
-		</div>		
+			</div>		
 	</div>
 </body>
 </html>
